--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <h3>Good Luck Hotel</h3>
             <p>Where modern comforts meet Traditional Elegance.</p>
             <div class="social-links mb-3">
-                <a href="https://www.instagram.com/_sri_kashyap_?igsh=MmpoM2I4Nm5mdGVl" class="text-light mx-2" target="_blank">
+                <a href="https://www.instagram.com/__sri_kashyap__?igsh=MmpoM2I4Nm5mdGVl" class="text-light mx-2" target="_blank">
                     <i class="bi bi-instagram"></i>
                 </a>
                 <a href="https://www.linkedin.com/in/srinidhi-s-kashyap-007918289" class="text-light mx-2" target="_blank">
